# BloodborneCalcCpp

./: .ninja_deps  .ninja_log  BloodborneCalc  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  damage.cpp  main.cpp
Windows/: .ninja_deps  .ninja_log  damage.cpp  main.cpp  weapon.h  weapon_data.cpp
include/: weapon.hpp
src/: damage.cpp  main.cpp  weapon_data.cpp
x86_64/: BloodborneCalc_x86-64  main.cpp
